# raytracing

./: Cargo.toml  README.md
src/: aabb.rs  bvh.rs  camera.rs  image_gen.rs  main.rs  material.rs  ray.rs  raytrace.rs  render.rs  utils.rs
src/hittable/: mod.rs  sphere.rs
