[package]
name = "raytracing"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = "0.3.0-alpha.10"
ultraviolet = "0.4.6"
ordered-float = "1.1.0"